# test_double

./: .gitignore  CMakeLists.txt  README.md  run.sh
source/: main.cpp
source/dummy/: ManagerService.h  Widget.h  WidgetDao.h  WidgetService.h
source/fake/: CustomerManagementSystem.h
source/spy/: Calculator.h
source/stub/: Student.h  StudentManagementSystem.h
tests/: CMakeLists.txt  test.cpp
tests/dummy/: WidgetServiceTest.cpp
tests/fake/: Customer.h  CustomerManagementSystemTest.cpp  FakeCustomerManagementSystem.h
tests/spy/: CalculatorTest.cpp  Call.h  SpyCalculator.h
tests/stub/: StubStudent.h  StudentManagementSystemTest.cpp
